--- a/templates/chat.html
+++ b/templates/chat.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <title>수민국 AI 챗봇</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 반응형 디자인을 위한 뷰포트 설정 -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}"> <!-- 파비콘 설정 -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">  <!-- CSS 파일 연결 -->
 </head>
 <body>
     <div class="chat-container">
