--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -324,3 +324,20 @@ body {
         align-items: center;
     }
 }
+
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+}
+
+th, td {
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: left;
+}
+
+th {
+    background-color: #f0f0f0;
+}
