누더기 코드

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -32,6 +32,7 @@
             {% endfor %}
             <button type="submit">업데이트</button>
         </form>
+        <a href="{{ url_for('chat_history') }}" class="button">대화 기록 보기</a>
     </div>
     {% endif %}
 </body>
