--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -393,9 +393,18 @@ body {
 #toggle-questions {
     background: none;
     border: none;
-    font-size: 14px;
     cursor: pointer;
-    margin-bottom: 5px;
+    transition: transform 0.3s;
+}
+
+#toggle-questions img {
+    width: 24px;
+    height: 24px;
+    transition: transform 0.3s;
+}
+
+#toggle-questions.open img {
+    transform: rotate(180deg);
 }
 
 #questions-container {
