--- a/templates/chat.html
+++ b/templates/chat.html
@@ -3,7 +3,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>주미니</title>
+    <title>GuminAI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 반응형 디자인을 위한 뷰포트 설정 -->
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}"> <!-- 파비콘 설정 -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">  <!-- CSS 파일 연결 -->
@@ -11,10 +11,10 @@
 <body>
     <div class="chat-container">
         <div class="chat-header">
-            <h2>주미니</h2>
             <button id="menu-button">
-                <img src="{{ url_for('static', filename='images/menu_icon.png') }}" alt="Menu">
+                <img src="{{ url_for('static', filename='images/menu_icon.png') }}" alt="Menu" class="menu-icon">
             </button>
+            <h2>GuminAI</h2>
             <select id="model-select">
                 <option value="model1">성내구민</option>
                 <option value="model2">성동구민</option>
@@ -24,8 +24,8 @@
         <div id="side-menu" class="side-menu">
             <div class="side-menu-content">
                 <p>저작권 정보</p>
-                <a href="https://github.com/your-repo">
-                    <img src="{{ url_for('static', filename='images/github_icon.png') }}" alt="GitHub">
+                <a href="#">
+                    <img src="{{ url_for('static', filename='images/github_icon.png') }}" alt="GitHub" class="github-icon">
                 </a>
                 <!-- 기타 내용 -->
             </div>
