--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -266,7 +266,7 @@ body {
     background-color: #fff;
     overflow-x: hidden;
     transition: left 0.3s;
-    z-index: 1000;
+    z-index: 1000; /* 사이드 메뉴의 z-index를 오버레이보다 높게 설정 */
     box-shadow: 2px 0 5px rgba(0,0,0,0.3);
 }
 
@@ -286,7 +286,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.5);
-    z-index: 999;
+    z-index: 999; /* 오버레이의 z-index를 사이드 메뉴보다 낮게 설정 */
 }
 
 #overlay.show {
@@ -487,4 +487,17 @@ th {
 .github-icon {
     width: 50px;  /* 원하는 너비로 설정 */
     height: auto; /* 높이는 자동으로 설정하여 비율 유지 */
+}
+
+.chat-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.chat-logo img {
+    max-width: 15%;
+    height: auto;
+    opacity: 0.3; /* 로고의 투명도 조절 */
 }
