--- a/templates/chat.html
+++ b/templates/chat.html
@@ -46,6 +46,7 @@
         <div class="chat-messages" id="chat-messages">
             <div class="chat-logo" id="chat-logo">
                 <img src="{{ url_for('static', filename='images/favicon.png') }}" alt="GuminAI 로고">
+                <p>안녕하세요! 구미나이입니다. 무엇을 도와드릴까요?</p>
             </div>
         </div>
         <div class="chat-input">
