이미지변경

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -18,6 +18,7 @@
             <select id="model-select">
                 <option value="model1">성내구민</option>
                 <option value="model2">성동구민</option>
+                <option value="model3">도날드(BETA)</option>
             </select>
         </div>
         <!-- 사이드 메뉴 -->
