--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>관리자 페이지</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 뷰포트 메타 태그 추가 -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}"> <!-- 파비콘 설정 -->
 </head>
